made fixed nav visible all te way down the page

--- a/scss/style.scss
+++ b/scss/style.scss
@@ -15,7 +15,7 @@ $basefont: 'Oswald';
 }
 .brand-logo {
       color: yellow !important;
-  text-shadow: 0 0 .5em purple;
+  text-shadow: 0 0 .5em rebeccapurple;
   font-variant:normal;
   
 }
@@ -80,6 +80,8 @@ nav {
   background: transparent;
   box-shadow: none;
   position: fixed !important;
+  height: auto;
+  z-index:999;
 }
 nav li {
   font-family:$fancyfont;
@@ -92,6 +94,8 @@ nav li {
   background-size: cover;
   position:relative;
   overflow: visible;
+  float: none !important;
+  display: inline-block;
  
 }
 .bounce {
@@ -104,6 +108,7 @@ nav li a {
   padding: 0 !important;
   text-align: center;
   font-variant: small-caps;
+  text-shadow: 1px 1px 1px rebeccapurple;
 }
 nav li a:hover {
     background: none;
